--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "websocket": "^1.0.24"
+    "websocket": "^1.0.24",
+    "express": "4.13.4"
   },
   "devDependencies": {},
   "scripts": {
